--- a/index.html
+++ b/index.html
@@ -6,39 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Document</title>
-    <script>
-        $(function(){
-            $.ajax({
-                url:'./class_609.json',
-                dataType:'json',
-                success:function(data){
-                    if(data.length>0){
-                        var tb = $("<table/>");
-                        for(var i in data){
-                            var $id=data[i].id;
-                            var $name=data[i].name;
-                            var $gender=data[i].gender;
-                            var $team=data[i].team;
-
-                            var row=$('<tr/>').append(
-                                $('<td/>').text($id),
-                                $('<td/>').text($name),
-                                $('<td/>').text($gender),
-                                $('<td/>').text($team),
-                            );
-                            tb.append(row);
-                        }
-                        $('.wrap').append(tb);
-                    }
-                }
-            })
-        })
-    </script>
 </head>
 <body>
-    <div class='wrap'></div>
+    <script>
+        $.ajax({
+            method:'GET',
+            url: "https://dapi.kakao.com/v3/search/book?target=title",
+            data: {query:'미움받을 용기'},
+            headers: {Authorization: 'KakaoAK 80579b21bf87d4f9cdcb3bf6780f0bdb'}
+        }).done(function(msg){
+            alert('data saved:'+msg);
+        })
 
-    <input id='myInput' type='text' placeholder="Search..">
-    
+    </script> 
 </body>
 </html>
